@@ -29,6 +29,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19020: Tkinter now uses splitlist() instead of split() in configure
+  methods.
+
 - Fix TypeError on "setup.py upload --show-response".
 
 - Issue #12226: HTTPS is now used by default when connecting to PyPI.
